--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 					<header id="header">
 
 				<div class="streetFighter container">
-						<img class="sfImg" src="images/street.gif">
+						<img class="sfImg" src="css/images/street.gif">
 				</div>		
 					<div class="container headerText">
 						<h1>Anam Khan</h1>
