--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 						<div class="containerTemp hide">
 								<div class="headerTemp">
-								<img class="cross" src="/assets/css/images/cross.svg">
+								<img class="cross" src="assets/css/images/cross.svg">
 								  <div class="search">
 									<input type="text" placeholder="Enter City Name" id="search-txt">
 									<a id="search-btn" href="#"><i class="fas fa-search"></i></a>
